src/terraform/modules/services/messaging/kafka/templates/ingress-direct-kafka.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka
  namespace: ${namespace}
spec:
  entryPoints:
    - kafka
  routes:
  - kind: Rule
    match: HostSNI(`*`)
    services:
    - name: kafka-cluster-kafka-bootstrap
      port: 9092
