src/terraform/modules/services/messaging/kafka/templates/ingress-direct-zookeeper.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: zookeeper
  namespace: ${namespace}
spec:
  entryPoints:
    - zookeeper
  routes:
  - kind: Rule
    match: HostSNI(`*`)
    services:
    - name: kafka-cluster-zookeeper-client
      port: 2181
